# Football-Goose

./: .gitignore  README.md  pyproject.toml  test.py
source/goose/: __init__.py  data.py  discover.py  goose_cli.py  model.py  name_standardization.py  registry.py
source/goose/data/: data_types.py  goose_data_structures.py  name_standardization.py  pull_data.py
source/goose/data/built_in_data_types/: __init__.py  results_data.py  schedule_data.py  standings_data.py
source/goose/engine/: data.py  forecast.py  league_forecast.py  model.py  monte_carlo.py  team_names.py
source/goose/forecast/: __init__.py  forecast.py  league_expectation.py  league_monte_carlo_simulation.py  monte_carlo_simulation.py
source/goose/models/: goose_model.py  static_poi_reg_model.py
source/goose/models/PL_sprm/: eval_statistics.json
source/goose/models/goose_active_models/: __init__.py
source/goose/models/goose_active_models/Bun_sprm/: model_identification.json  parameters.json  smfmodel.pkl
source/goose/models/goose_active_models/LaL_sprm/: model_identification.json  parameters.json  smfmodel.pkl
source/goose/models/goose_active_models/Lig1_sprm/: model_identification.json  parameters.json  smfmodel.pkl
source/goose/models/goose_active_models/PL_sprm/: model_identification.json  parameters.json  smfmodel.pkl
source/goose/models/goose_active_models/SerA_sprm/: model_identification.json  parameters.json  smfmodel.pkl
source/goose/models/goose_trained_models/: __init__.py
source/goose/models/goose_trained_models/PL_sprm/: model_identification.json  parameters.json  smfmodel.pkl
source/goose/operation/: operations_folder.py
source/goose/operation/built_in_operations/: __init__.py  discover_operations.py  forecast_operations.py  goose_operations.py  prediction_operations.py  utilities.py
