# football-goose

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "football-goose"
version = "0.2.0-alpha"
description = "Football/Soocer (G)eneralized f(O)recast m(O)dels & (S)imulation (E)ngine"
readme = "README.md"
authors = [{name = "Mate Csapo"}]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "soccerdata",
    "statsmodels",
]

[project.urls]
Homepage = "https://github.com/matecsapo/Football-Goose"
Repository = "https://github.com/matecsapo/Football-Goose.git"

[tool.setuptools.packages.find]
where = ["source"]
include = ["goose*"]

[tool.setuptools.package-data]
"goose.models.goose_active_models" = ["*"]