# football-goose

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "football-goose"
version = "1.0.0"
description = "Football/Soocer (G)eneralized f(O)recast m(O)dels & (S)imulation (E)ngine"
readme = "README.md"
authors = [{name = "Mate Csapo"}]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "soccerdata",
    "statsmodels",
    "dill",
    "typer"
]

[project.urls]
Homepage = "https://github.com/matecsapo/Football-Goose"
Repository = "https://github.com/matecsapo/Football-Goose.git"

[tool.setuptools.packages.find]
where = ["source"]
include = ["goose*"]

[project.scripts]
goose = "goose.goose_cli:Goose_CLI"